--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hey, I'm</p>
             <h1 class="title">Christian Cuadero</h1>
-            <p class="section__text__p2">Frontend Developer</p>
+            <p class="section__text__p2">Web Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/Resume_Christian.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
@@ -56,6 +56,22 @@
         </div>
     </section>
 
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img src="./assets/about-pic.png" alt="profile picture" class="about-pic">
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/experience.png" alt="experience" class="icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="script.js""></script>
 </body>
