--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/experience.png" alt="experience" class="icon">
+                        <img src="./assets/" alt="experience" class="icon">
                     </div>
                 </div>
             </div>
