--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <h1 class="title">About Me</h1>
         <div class="section-container">
             <div class="section__pic-container">
-                <img src="./assets/about-pic.png" alt="profile picture" class="about-pic">
+                <img src="./assets/about-pic.jpeg" alt="profile picture" class="about-pic">
             </div>
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/" alt="experience" class="icon">
+                        <img src="./assets/experience.png" alt="experience" class="icon">
                     </div>
                 </div>
             </div>
