update html and css

--- a/index.html
+++ b/index.html
@@ -66,11 +66,29 @@
             <div class="about-details-container">
                 <div class="about-containers">
                     <div class="details-container">
-                        <img src="./assets/experience.png" alt="experience" class="icon">
+                        <img src="./assets/experience.png" alt="experience icon" class="icon">
+                        <h3>Experience</h3>
+                        <p>May 2021 - present <br> Data Researcher</p>
+                    </div>
+                    <div class="details-container">
+                        <img src="./assets/education.png" alt="education icon" class="icon">
+                        <h3>Education</h3>
+                        <p>Post-Baccalaureate Diploma in Computing <br> Bachelor of Science in Aviation Electronics Technology </p>
+                    </div>
+                 </div>
+                    <div class="text-container">
+                        <p>
+                            In my professional journey, I worked as a Customer Service Representative/Technical Support, where I had the privilege of interacting directly with clients. 
+                            This role honed my communication and problem-solving skills, teaching me the value of client satisfaction. It made me realize that building user-friendly web applications is essential in caring for customers and meeting their needs effectively.
+                        <br>
+                        <br> Working as a Data Researcher has honed my data entry and data research skills. My attention to detail has grown, and I've developed a strong focus on data accuracy while gathering important information. 
+                            Additionally, my role involves analyzing financial statements, which has sharpened my critical and analytical skills.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+            <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
     </section>
 
     <script src="script.js""></script>
