--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experince">Experience</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -68,7 +68,10 @@
                     <div class="details-container">
                         <img src="./assets/experience.png" alt="experience icon" class="icon">
                         <h3>Experience</h3>
-                        <p>May 2021 - present <br> Data Researcher</p>
+                            <p>Data Researcher 
+                            <br>Customer Service Representative 
+                            <br> Technical Support Agent 
+                            </p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/education.png" alt="education icon" class="icon">
@@ -78,17 +81,25 @@
                  </div>
                     <div class="text-container">
                         <p>
-                            In my professional journey, I worked as a Customer Service Representative/Technical Support, where I had the privilege of interacting directly with clients. 
-                            This role honed my communication and problem-solving skills, teaching me the value of client satisfaction. It made me realize that building user-friendly web applications is essential in caring for customers and meeting their needs effectively.
-                        <br>
-                        <br> Working as a Data Researcher has honed my data entry and data research skills. My attention to detail has grown, and I've developed a strong focus on data accuracy while gathering important information. 
-                            Additionally, my role involves analyzing financial statements, which has sharpened my critical and analytical skills.
+                            An aspiring web developer with a foundation in programming, dedicated, hardworking, and driven to learn and grow in the dynamic world of web development.  
+                            Holder of a Post-Baccalaureate Diploma in Computing from Cebu Institute of Technology University, where I cultivated my passion for technology and gained foundational programming knowledge.
+                            I'm currently focused on expanding my knowledge in web development, Canva design, and non-coding tools like Webflow. My goal is to secure a position where I can leverage my creativity and technical expertise to create cutting-edge web solutions. 
+                            I'm enthusiastic about collaborating with experienced professionals to further refine my skills and become a sought-after developer in this ever-evolving industry. 
+                            I firmly believe that learning is a continuous journey, and I'm passionate about exploring new technologies and programming languages.
                         </p>
                     </div>
                 </div>
             </div>
         </div>
             <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'">
+    </section>
+
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="">
+
+        </div>
     </section>
 
     <script src="script.js""></script>
