--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hey, I'm</p>
             <h1 class="title">Christian Cuadero</h1>
-            <p class="section__text__p2">Web Developer</p>
+            <p class="section__text__p2">Aspiring Web Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/Resume_Christian.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
