update html and css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hey, I'm</p>
             <h1 class="title">Christian Cuadero</h1>
-            <p class="section__text__p2">Aspiring Web Developer</p>
+            <p class="section__text__p2">Web Developer</p>
             <div class="btn-container">
                 <button class="btn btn-color-2" onclick="window.open('./assets/Resume_Christian.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
@@ -81,7 +81,7 @@
                  </div>
                     <div class="text-container">
                         <p>
-                            An aspiring web developer with a foundation in programming, dedicated, hardworking, and driven to learn and grow in the dynamic world of web development.  
+                            A Filipino Web Developer with a foundation in programming, dedicated, hardworking, and driven to learn and grow in the dynamic world of web development.  
                             Holder of a Post-Baccalaureate Diploma in Computing from Cebu Institute of Technology University, where I cultivated my passion for technology and gained foundational programming knowledge.
                             I'm currently focused on expanding my knowledge in web development, Canva design, and non-coding tools like Webflow. My goal is to secure a position where I can leverage my creativity and technical expertise to create cutting-edge web solutions. 
                             I'm enthusiastic about collaborating with experienced professionals to further refine my skills and become a sought-after developer in this ever-evolving industry. 
@@ -97,9 +97,62 @@
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
         <h1 class="title">Experience</h1>
-        <div class="">
-
+        <div class="experience-details-container">
+            <div class="about-containers">
+                <div class="details-containers">
+                    <h1 class="experience-sub-title">Data Researcher</h1>
+                    <div class="article-container">
+                        <article>
+                            <h3>Eurekahedge</h3>
+                            <h4>May 2021 - present</h4>
+                            <div>
+                                <li>Assigned to research financial data about private pensions, public pensions, endowments, foundations,
+                                    and other types of institutional investors.</li>
+                                <li>Gathered relevant information needed to update the investor
+                                    profiles, such as emails, phone numbers, LinkedIn profiles, and financial data.</li>
+                                <li>Used tools like Hunter.io and LinkedIn Sales
+                                    Navigator to find email addresses and LinkedIn profiles.</li>
+                               <li>Utilized a CRM database to maintain an investor
+                                    database, ensuring the accuracy of information for various types of institutional investors.</li>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-containers">
+                    <h1 class="experience-sub-title">Customer Service Representative</h1>
+                    <div class="article-container">
+                        <article>
+                            <h3>Accenture</h3>
+                            <h4>May 2020 - May 2021</h4>
+                            <div>
+                                <li>Answering incoming calls and provide brilliant customer service in response to a wide range of customer
+                                    queries and to achieve first time resolution.</li>
+                                <li>Support business growth by generating sales leads.</li>
+                                <li>Demonstrated problem solving and analytical skills.</li>
+                                <li>Resolved a variety of calls including but not limited to after sales, accounts/ billing queries, upgrades and general queries</li>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                <div class="details-containers">
+                    <h1 class="experience-sub-title">Technical Support Agent</h1>
+                    <div class="article-container">
+                        <article>
+                            <h3>Concentrix</h3>
+                            <h4>Aug 2017 - Mar 2020</h4>
+                            <div>
+                                <li>Perform troubleshooting steps when customer is experiencing technical issues on the software.</li>
+                                <li>Developing and maintaining accurate files.</li>
+                                <li>QuickBooks specialist (payroll, invoicing, billing, and bank reconciliation).</li>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+                
+            </div>
         </div>
+        <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
+
     </section>
 
     <script src="script.js""></script>
