html and css revision

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="./assets/chan.png" alt="profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hey, I'm</p>
+            <p class="section__text__p1">Hi, I'm</p>
             <h1 class="title">Christian Cuadero</h1>
             <p class="section__text__p2">Web Developer</p>
             <div class="btn-container">
@@ -153,6 +153,22 @@
         </div>
         <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'">
 
+    </section>
+
+    <section id="projects">
+        <p class="section__text__p1"> Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="details-container color-container">
+                <img src="./assets/project-1.png" alt="Project 1"
+                class="project-img">
+                <h2 class="experience-sub-title project-title">Project One</h2>
+                <div class="btn-container">
+                    <button class="btn btn-color-2 project-btn" onclick="location.href=https://github.com/">
+                    Github</button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="script.js""></script>
