update indext and css
minor revision on text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <img src="./assets/chan.png" alt="profile picture">
         </div>
         <div class="section__text">
-            <p class="section__text__p1">Hi, I'm</p>
+            <p class="section__text__p1_">Hi, I'm</p>
             <h1 class="title">Christian Cuadero</h1>
             <p class="section__text__p2">Web Developer</p>
             <div class="btn-container">
