--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="Email icon"
                 class="icon contact-icon email-icon">
-                <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+                <p><a href="mailto:christiancuadero@gmail.com">christiancuadero@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon"
