--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                     class="project-img">
                     <h2 class="experience-sub-title project-title">Project One</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/chancuadero/FrontendMentor_QRCode.git')">
                         Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://frontend-mentor-qr-code-mu.vercel.app')">
                             Demo</button>
                     </div>
                 </div>
@@ -176,9 +176,9 @@
                     class="project-img">
                     <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/chancuadero/Recipe_page.git')">
                         Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://recipe-page-chan.vercel.app')">
                             Demo</button>
                     </div>
                 </div>  
@@ -187,9 +187,9 @@
                     class="project-img">
                     <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/chancuadero/Sunflower.git')">
                         Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/')">
+                        <button class="btn btn-color-2 project-btn" onclick="window.open('https://ssunflower.vercel.app')">
                             Demo</button>
                     </div>
                 </div>
