--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h1 class="title">Christian Cuadero</h1>
             <p class="section__text__p2">Web Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/ResumeChristian.pdf')">Download CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/ChristianResume.pdf')">Download CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             <div id="socials-container">
@@ -104,7 +104,7 @@
                     <div class="article-container">
                         <article>
                             <h3>Eurekahedge</h3>
-                            <h4>May 2021 - present</h4>
+                            <h4>May 2021 - December 2024</h4>
                             <div>
                                 <li>Assigned to research financial data about private pensions, public pensions, endowments, foundations,
                                     and other types of institutional investors.</li>
